improve tests for inner entity scenario

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>plusminus-security</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>software.plusminus</groupId>
+            <artifactId>plusminus-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>software.plusminus</groupId>
