populate tenant from context on missed/null field

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
         </dependency>
         <dependency>
             <groupId>software.plusminus</groupId>
+            <artifactId>plusminus-tenant</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>software.plusminus</groupId>
             <artifactId>plusminus-data</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
